Changed jumbotron, added an example code to fix jumping with the nav. Not a complete fix, byt did well for desktop.

--- a/css/main.css
+++ b/css/main.css
@@ -49,10 +49,8 @@ a {
   width: 80vw; }
 
 #jumbotron {
-  margin-top: 100px; }
+  margin-top: 90px; }
   #jumbotron .jumbotron-bg {
-    width: 80vw;
-    height: auto;
     background-image: url("/img/project2.jpg");
     background-repeat: no-repeat;
     -moz-border-radius: 2px;
@@ -60,30 +58,30 @@ a {
     border-radius: 2px;
     box-shadow: 1px 1px 1px #666; }
     #jumbotron .jumbotron-bg .container {
+      margin: auto;
+      padding: 20vh 0;
       font-size: 120%;
-      padding: 10px 20px;
-      margin: 30vh auto;
       -moz-border-radius: 2px;
       -webkit-border-radius: 2px;
       border-radius: 2px;
       box-shadow: 1px 1px 1px #666;
-      background-color: rgba(255, 255, 255, 0.7);
-      max-width: 80%; }
+      background-color: rgba(255, 255, 255, 0.7); }
       #jumbotron .jumbotron-bg .container h2 {
-        align-self: center;
-        width: 80%; }
+        margin: 0 10%;
+        align-self: center; }
       #jumbotron .jumbotron-bg .container ul {
         flex-direction: row; }
   @media screen and (max-width: 1070px) {
-    #jumbotron .jumbotron-bg .container {
-      justify-content: center;
+    #jumbotron .jumbotron-bg {
       width: 100%;
-      height: 100%;
-      margin: auto;
-      padding: 10vh 0;
-      max-width: none; }
-      #jumbotron .jumbotron-bg .container ul {
-        flex-direction: column; } }
+      height: 100%; }
+      #jumbotron .jumbotron-bg .container {
+        justify-content: center;
+        margin: auto;
+        padding: 10vh 0;
+        max-width: none; }
+        #jumbotron .jumbotron-bg .container ul {
+          flex-direction: column; } }
 
 #aboutMe .container {
   background-color: #FFF;
@@ -252,16 +250,18 @@ a {
   .navbar-nav {
     display: none; } }
 .card-item {
+  padding: 0 0 30px 0;
   display: flex;
-  padding: 0.5em;
-  width: 100%;
-  flex-grow: 1; }
+  flex-grow: 1;
+  width: 100%; }
   @media all and (min-width: 40em) {
     .card-item {
+      padding: 0.5em;
       width: 50%;
       flex-grow: 0; } }
   @media all and (min-width: 60em) {
     .card-item {
+      padding: 0.5em;
       width: 30%;
       flex-grow: 0; } }
 
