--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,16 +1,18 @@
  .card-item{
+  padding: 0 0 30px 0;
   display: flex;
-  padding: 0.5em;
-  width:100%;
   flex-grow: 1;
+  width:100%;
 
     @media all and (min-width:40em){
+      padding: 0.5em;
       width:50%;
       flex-grow: 0;
   }
 
 
   @media all and (min-width:60em){
+      padding: 0.5em;
       width:30%;
       flex-grow: 0;
   }
