--- a/sass/modules/_jumbotron.scss
+++ b/sass/modules/_jumbotron.scss
@@ -1,37 +1,33 @@
 #jumbotron{
-  margin-top: 100px;
-  .jumbotron-bg{
-    width: 80vw;
-    height: auto;
+  margin-top: 90px;
 
+  .jumbotron-bg{
     background-image: url("/img/project2.jpg");
     background-repeat:no-repeat;
     @include border-radius(2px);
     @include box-shadow(1px);
     .container{
+      margin:auto;
+      padding: 20vh 0;
       font-size: 120%;
       h2{
+        margin: 0 10%;
         align-self: center;
-        width:80%;
       }
-      padding: 10px 20px;
-      margin: 30vh auto;
       @include material-std;
       background-color: $jumbotron-bg;
-      max-width: 80%;
 
       ul{
         flex-direction: row;
       }
-
     }
   }
   @media screen and (max-width: $break-large){
     .jumbotron-bg{
+      width:100%;
+      height: 100%;
       .container {
         justify-content: center;
-        width:100%;
-        height: 100%;
         margin:auto;
         padding: 10vh 0;
         max-width: none;
